# rule30-lab

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  pyproject.toml
docs/: adversarial_review.md  architecture.md  benchmark_matrix.md  cli.md  experiment_protocol.md  independent_research_audit_2026-07-22.md  mathematical_background.md  problem1_cuda_extended_search.md  problem1_eventual_zero_tail_search.md  problem1_focus_program.md  problem1_sideways_invariants.md  problem1_sideways_prefix_equivalence.md  problem1_sideways_research.md  problem2_conservation_search.md  problem2_multimillion_discrepancy.md  problem2_polynomial_conservation.md  problem2_scaling_analysis.md  problem3_extended_searches.md  problem3_linear_lower_bound.md  problem3_published_formula.md  problem3_searches.md  problem3_sublinear.md  problem_statements.md  publication-audit.md  publication-validation.md  reference_audit.md  research_log.md  research_status.md  resource_controls.md  setup_wsl_cuda.md  system_changes.md  theory_literature_review.md
docs/public_provenance/: 20260722_controlled_run_manifest.json  README.md
experiments/problem1_nonperiodicity/: README.md  analyze_inverse_lift_sections.py  analyze_period_defect.py  analyze_period_two.py  analyze_period_two_2adic_zero_countermodels.py  analyze_period_two_actual_witness_distance.cpp  analyze_period_two_actual_witness_distance.py  analyze_period_two_arithmetic_quotient.cpp  analyze_period_two_arithmetic_quotient.py  analyze_period_two_arrangement_cocycles.py  analyze_period_two_canonical_relations.py  analyze_period_two_characteristic_front.py  analyze_period_two_complete_local_quotient.cpp  analyze_period_two_complete_local_quotient.py  analyze_period_two_coupled_strip.py  analyze_period_two_dual_cut.py  analyze_period_two_dual_multiscale.py  analyze_period_two_first_return.py  analyze_period_two_fringe_language.py  analyze_period_two_frontier_gluing.py  analyze_period_two_global_transducer.py  analyze_period_two_multitime_bulk.py  analyze_period_two_phase_universality.py  analyze_period_two_quadratic_parity.py  analyze_period_two_quotient.py  analyze_period_two_renewal.py  analyze_period_two_schedule_coding.py  analyze_period_two_schedule_survivor.py  analyze_period_two_terminal_order.py  analyze_period_two_witness_complexity.py  analyze_period_two_witness_lifts.cpp  analyze_period_two_witness_lifts.py  analyze_period_two_zero_phase.py  analyze_sideways_prefix_equivalence.py  analyze_two_adic_diagonal.py  run_sideways_search.py  search_eventual_zero_tail.py  search_sideways_invariants.py
experiments/problem2_balance/: run_finite_prefix.py  run_multimillion_discrepancy.py  run_scaling_analysis.py  search_local_conservation.py  search_polynomial_conservation.py
experiments/problem3_complexity/: run_exact_searches.py  run_extended_model_searches.py
experiments/shared/: run_benchmark_matrix.py
include/rule30/: engine.hpp
proofs/informal/: lean_reconstruction_notes.md  problem1_finite_sideways_inversion.md  problem1_inverse_lift_sections.md  problem1_period_one_exclusion.md  problem1_period_two_2adic_zero_countermodels.md  problem1_period_two_actual_witness_distance.md  problem1_period_two_arithmetic_quotient.md  problem1_period_two_arrangement_cocycles.md  problem1_period_two_barrier.md  problem1_period_two_canonical_relations.md  problem1_period_two_characteristic_front.md  problem1_period_two_complete_local_quotient.md  problem1_period_two_coupled_strip.md  problem1_period_two_dual_cut.md  problem1_period_two_dual_multiscale.md  problem1_period_two_first_return.md  problem1_period_two_fringe_language.md  problem1_period_two_frontier_gluing.md  problem1_period_two_global_transducer.md  problem1_period_two_multitime_bulk.md  problem1_period_two_phase_universality.md  problem1_period_two_quadratic_parity.md  problem1_period_two_quotient_obstruction.md  problem1_period_two_renewal_reduction.md  problem1_period_two_schedule_coding.md  problem1_period_two_schedule_survivor.md  problem1_period_two_terminal_order.md  problem1_period_two_witness_complexity.md  problem1_period_two_witness_lift_profiles.md  problem1_period_two_zero_phase.md  problem1_sideways_prefix_equivalence.md  problem1_two_adic_diagonal_map.md  problem1_whole_tail_equivalence.md
proofs/lean/: Rule30.lean  lake-manifest.json  lakefile.toml
results/benchmarks/: 20260722_cpp_scalar_vs_avx2_250k.json  20260722_cuda_batch_period.json  20260722_cuda_direct_evolution_n32768.json  20260722_cuda_sideways_1003_h63_six_chunks.json  20260722_cuda_sideways_4099_h63_unchunked.json  20260722_rust_coordinate_vs_packed.json  20260722_same_output_matrix_n4096.json
results/environment/: environment_report.md
results/problem1/: 20260722_lean_local_reconstruction_lemmas.json  20260722_period_two_2adic_zero_countermodels.json  20260722_period_two_coupled_strip.json  20260722_period_two_first_return.json  20260722_period_two_fringe_language.json  20260722_period_two_frontier_gluing.json  20260722_period_two_global_transducer.json  20260722_period_two_quadratic_parity.json  20260722_period_two_renewal_reduction.json  20260722_period_two_schedule_coding.json  20260722_period_two_schedule_survivor.json  20260722_sideways_periodic_search_h500.json  (+14 more)
scripts/: generate_reference_vectors.py  reproduce_reported_results.py  run_quality_gates.sh
src/cpp/: CMakeLists.txt  avx2.cpp  engine.cpp  main.cpp
src/cpp/detail/: update.hpp
src/cuda/: CMakeLists.txt  README.md  batch_period.cu  batch_sideways.cu  device_probe.cpp  direct_evolution.cu  direct_evolution_benchmark.cpp  extended_period_search.cpp  generate_cli.cpp  period_benchmark.cpp  sideways_benchmark.cpp
src/cuda/include/rule30_cuda/: batch_period.hpp  batch_sideways.hpp  direct_evolution.hpp
src/rust/rule30-core/: Cargo.toml
src/rust/rule30-core/src/: lib.rs
tests/cpp/: CMakeLists.txt  check_cli.cmake  test_engine.cpp
tests/cuda/: CMakeLists.txt  test_batch_period.cpp  test_batch_sideways.cpp  test_direct_evolution.cpp  test_extended_period_search.cpp  test_generate_cli.cpp
tests/python/: test_cli.py  (+53 more)
(+48 files in other folders)
