cmake_minimum_required(VERSION 3.25)
project(rule30_lab VERSION 0.1.0 LANGUAGES CXX)

option(RULE30_ENABLE_AVX2 "Build the runtime-dispatched AVX2 implementation" ON)
option(RULE30_ENABLE_CUDA "Build CUDA components when a compiler is available" ON)
option(RULE30_ENABLE_SANITIZERS "Enable AddressSanitizer and UndefinedBehaviorSanitizer" OFF)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include(CTest)

if(RULE30_ENABLE_SANITIZERS AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  add_compile_options(-fsanitize=address,undefined -fno-omit-frame-pointer)
  add_link_options(-fsanitize=address,undefined)
endif()

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/CMakeLists.txt")
  add_subdirectory(src/cpp)
endif()

if(RULE30_ENABLE_CUDA)
  include(CheckLanguage)
  if(NOT DEFINED CMAKE_CUDA_COMPILER AND EXISTS "/usr/local/cuda/bin/nvcc")
    set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc" CACHE FILEPATH "CUDA compiler")
  endif()
  check_language(CUDA)
  if(CMAKE_CUDA_COMPILER)
    enable_language(CUDA)
    set(CMAKE_CUDA_STANDARD 20)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/src/cuda/CMakeLists.txt")
      add_subdirectory(src/cuda)
    endif()
  else()
    message(STATUS "CUDA compiler unavailable; CUDA targets disabled")
  endif()
endif()
