add_executable(rule30_cuda_tests test_batch_period.cpp)
target_link_libraries(rule30_cuda_tests PRIVATE rule30::cuda)
target_compile_features(rule30_cuda_tests PRIVATE cxx_std_20)
target_compile_options(rule30_cuda_tests PRIVATE -Wall -Wextra -Wpedantic)

add_test(NAME rule30_cuda_batch_period COMMAND rule30_cuda_tests)
set_tests_properties(rule30_cuda_batch_period PROPERTIES SKIP_RETURN_CODE 77)
